<resources>
    <string name="app_name">COVID Healthcare</string>
    <string name="covid_updates">Nationwide COVID Updates</string>
    <string name="htg_sensei">htg_sensei</string>
    <string name="number_of_cases">Number of cases:</string>
    <string name="cases_today">Cases Today:</string>
    <string name="statewise_covid_updates">Statewise Covid Updates</string>
    <string name="none">None</string>
    <string name="fever">Fever</string>
    <string name="lung_disease">Lung Disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="last_10_14_days">Last 10-14 days</string>
    <string name="last_5_10_days">Last 5-10 days</string>
    <string name="last_0_5_days">Last 0-5 days</string>
    <string name="none">None</string>
    <string name="cough">Cough</string>
    <string name="sore_throat">Sore throat</string>
    <string name="none">None</string>
    <string name="asthma">Asthma</string>
    <string name="health_questionairre">Health Questionairre</string>
    <string name="do_you_have_any_of_the_pre_existing_conditions">Do you have any of the pre-existing conditions?</string>
    <string name="have_you_come_in_contact_with_any_covid_19_patient_in_the_last_14_days">Have you come in contact with any Covid-19 patient in the last 14 days?</string>
    <string name="are_feeling_any_of_the_below_symptoms">Are feeling any of the below symptoms?</string>
</resources>