<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionairre">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".questionairre">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".questionairre">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".questionairre"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <CheckBox
                    android:id="@+id/none2_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="36dp"
                    android:text="@string/none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="388dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="44dp"
                    android:text="@string/have_you_come_in_contact_with_any_covid_19_patient_in_the_last_14_days"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lung_id" />

                <CheckBox
                    android:id="@+id/lung_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="112dp"
                    android:text="@string/lung_disease"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <CheckBox
                    android:id="@+id/asthma_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="232dp"
                    android:text="@string/asthma"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <CheckBox
                    android:id="@+id/diabetes_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/diabetes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <CheckBox
                    android:id="@+id/ten_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/last_10_14_days"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <CheckBox
                    android:id="@+id/five_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="56dp"
                    android:text="@string/last_5_10_days"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <CheckBox
                    android:id="@+id/zero_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/last_0_5_days"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ten_id" />

                <CheckBox
                    android:id="@+id/none3_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    app:layout_constraintStart_toStartOf="@+id/five_id"
                    app:layout_constraintTop_toBottomOf="@+id/five_id" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="388dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/do_you_have_any_of_the_pre_existing_conditions"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/symp_sore_id" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="388dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/are_feeling_any_of_the_below_symptoms"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <CheckBox
                    android:id="@+id/symp_cough_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/cough"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <CheckBox
                    android:id="@+id/symp_fever_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/fever"
                    app:layout_constraintStart_toEndOf="@+id/symp_cough_id"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <CheckBox
                    android:id="@+id/symp_sore_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/sore_throat"
                    app:layout_constraintStart_toEndOf="@+id/symp_fever_id"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <CheckBox
                    android:id="@+id/none1_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/none"
                    app:layout_constraintStart_toEndOf="@+id/symp_sore_id"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="52dp"
                    android:text="@string/health_questionairre"
                    android:textSize="34sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="156dp"
                    android:layout_marginTop="16dp"
                    android:onClick="Check"
                    android:text="Submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/none3_id"
                    app:layout_constraintVertical_bias="0.1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>